--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -6754,6 +6754,7 @@ body.front-page{
 		}
 
 		#block-hwc-homepage-hwc-homepage-news-events{
+			padding-bottom: 3em;
 			.before-the-campaign{
 				background: transparent;
 				.content-box-before{
@@ -6794,6 +6795,9 @@ body.front-page{
 										float: left;
 										border-bottom: 1px solid #bcd75b;
 										padding-bottom: 2em;
+										img{
+											height: auto;
+										}
 										.media-body{
 											padding-left: 1em;
 											> span.date-display-single{
@@ -6849,6 +6853,7 @@ body.front-page{
 									}
 									> div:nth-child(2){
 										border-bottom: 0;
+										padding-bottom: 12px;
 										> div.pull-left{
 											float: right !important;
 										}
