--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -6762,7 +6762,7 @@ body.front-page{
 					margin-top: 4em;
 					padding-bottom: 0;
 					.box-before{
-						margin-bottom: 0;
+						margin-bottom: 2em;
 						padding: 0;
 						margin-right: 0;
 					}
@@ -7064,6 +7064,10 @@ body.front-page{
 					    float: left;
 					    background: url(../images/ico-social-media.png) 1px 5px no-repeat;
 				}
+			}
+
+			p{
+				width: 59%;
 			}
 
 			a.see-more-button-20{
