--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-767.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-767.less
@@ -101,6 +101,41 @@
 
 @media (max-width: 767px){
 
+	header.navbar-default{
+		&.sticky-menu{
+			.campaigns-header{
+				.navbar-header{
+				}
+			}			
+		}
+		.campaigns-header{
+			padding: 0rem !important;
+			.row{
+				padding: 0 !important;
+			}
+			.navbar-header{
+				padding:0;
+				.col-xs-12.col-sm-9{
+					a{
+						margin-top: 1rem !important;
+						img{
+							&.pull-left{
+								height:48px !important;
+								margin-top: 18px !important;
+							}
+						}
+					}
+					img{
+						&:nth-child(3){
+					    margin: 49px 0 0 5px!important;
+					    height: 28px !important;
+						}
+					}
+				}			
+			}
+		}	
+	}
+
 	header.navbar-default .campaigns-header .navbar-header .region-header #block-lang-dropdown-language, header.navbar-default .campaigns-header .navbar-header .region-header #block-menu-menu-header-login ~ #block-lang-dropdown-language{
 		background: transparent;
 		padding-bottom: 1em;
@@ -144,6 +179,20 @@
 		height: 31px;
 	}
 
+	.container{
+		.menu-name-main-menu{
+			ul.menu{
+				&.nav{
+					.content-box-sub{
+						width: 100%;
+						margin: 0 0 0.7em;
+					}
+				}
+			}
+		}
+	}
+
+
 	.intro-splash-20 {
 		.views-row-first{ 
 			padding-bottom: 1em;
@@ -174,19 +223,48 @@
 		}
 		.box-before.events{
 			width: 56%;
-    		margin-right: 0;
+  		margin-right: 0;
 		}
 
 	}
 
-	.before-the-campaign .content-box-before .box-before{
-		width: 100%;
-		margin-right: 1em;
+	.before-the-campaign{
+		.content-box-before{
+			.box-before{
+				width: 100%;
+				margin-right: 1em;
+				.block-views{
+					.view-view-campaign-materials{
+						.view-content{
+							> div{
+							  width: 100%;
+							}
+						}
+					}
+				}
+			}
+		}
 	}
 
-	.comming-soon h2{
-		width: 100%;
+
+	.comming-soon{
+		h2{
+			width: 100%;
+		}
+		.content-counter{
+			.time-and-counters{
+		    justify-content: space-around;
+		    flex-wrap: wrap;
+				li{
+					width: 50%;
+			    span{
+						margin: auto !important;
+			    }
+				}
+			}
+		}
 	}
+
 
 	ul.time-and-counters {
 	    width: 255px;
@@ -262,47 +340,42 @@
     	right: 0;
 	}
 
-	.page-search .main-container #block-system-main .view .views-row .more-link{
-		bottom: 10px;
-    	right: 0;
-	}
-
 	header.navbar-default .campaigns-header .navbar-header .region-header #block-search-form .input-group input{
 		width: 0;
 		height: 31px;
 	}
 
 	#edit-search-block-form--2{   
-        position: absolute;
-        width: 0;
-       	min-width: 0;
-        background: #FFF;
-        top: -3px;
-        right: 27px;
-        border-bottom-left-radius: 10px;
-        border-top-left-radius: 10px;
-        padding-top: 3px;
-        padding-bottom: 3px;
-        color:#003399;
-        height: 30px;
-        font-size: 0.8rem;
-        opacity: 0;
-      
-    }
+      position: absolute;
+      width: 0;
+     	min-width: 0;
+      background: #FFF;
+      top: -3px;
+      right: 27px;
+      border-bottom-left-radius: 10px;
+      border-top-left-radius: 10px;
+      padding-top: 3px;
+      padding-bottom: 3px;
+      color:#003399;
+      height: 30px;
+      font-size: 0.8rem;
+      opacity: 0;
+    
+  }
 
-    #edit-search-block-form--2.expand , #block-search-form.expand{
-        width: 220px;
-        min-width: 220px;
-        opacity: 1;
-        z-index: 99999999999;
-        -webkit-transition: width .3s ease-in-out;
-        -moz-transition: width .3s ease-in-out;
-        -o-transition: width .3s ease-in-out;
-        transition: width .3s ease-in-out;
-    }   
+  #edit-search-block-form--2.expand , #block-search-form.expand{
+      width: 220px;
+      min-width: 220px;
+      opacity: 1;
+      z-index: 99999999999;
+      -webkit-transition: width .3s ease-in-out;
+      -moz-transition: width .3s ease-in-out;
+      -o-transition: width .3s ease-in-out;
+      transition: width .3s ease-in-out;
+  }   
 
-    #search-block-form > div > div > div.input-group > span.input-group-btn > button{
-	    pointer-events: none;
+  #search-block-form > div > div > div.input-group > span.input-group-btn > button{
+    pointer-events: none;
 	}
 
 	.recommended-tool{
@@ -403,45 +476,89 @@
 	.new-select-style{
 		display: block !important;
 	}
-
+/*
 	.page-publications .sidebars_first.with-result-for, .page-publications .sidebars_first, .page-events .sidebars_first{
 		margin-top: 1em;
 	}
 
 	.page-publications, .page-tools-and-publications-campaign-materials{
-
 		.content{
 			display: block;
 		}
-
 		.main-container {
-	    	padding-right: 0 !important;
-	    	padding-left: 0 !important;
+    	padding-right: 0 !important;
+    	padding-left: 0 !important;
 		}
-
 		.content-publication-info{
 			display: block;
 		}
-
 		.date-display-single{
 			float: none;
 			display: block;
 			width: 100%;
 		}
-
 		.pages{
 			display: block;
 			width: 100%;
 		}
 	}
+*/
 
-	.page-tools-and-publications{
+
+	.page-publications, .page-tools-and-publications-campaign-materials, .page-tools-and-publications{
+		.sidebars_first{
+			margin: 1rem 0;
+			width: 100%;
+		}
 		#edit-left-column{
 			.content-filters{
-				margin-top: 1em;
+				margin: 1em 0 0;
 			}
 		}
+		#content{
+	    margin: 1rem 0 0 0 !important;
+	    width: 100% !important;
+		}
+		#edit-exposed-widgets{
+			.views-exposed-widget{
+				&.views-widget-filter-search_api_views_fulltext{
+					width: auto!important;
+					margin: 2rem 0 0!important;
+				}
+				&.views-widget-filter-search_api_views_fulltext{
+					width: auto!important;
+					margin: 1rem 0 0!important;
+				}
+			}
+		}
+		.publications-right-column{
+			width: 100%;
+			float: right;
+			padding-right:0;
+			h2{
+				height: auto;
+				line-height: 20px;
+				a{
+					font-style: normal;
+					font-size: 2.2rem;
+				}
+			} 
+		}
+		.box-latest-publications .right-column{
+			width: 100%;
+		}
+		.publication-see-more-bottom-container{
+			margin-top: 1em;
+			margin-bottom: 0;
+			bottom:auto;
+			position:static;
+		}
+		.news-see-more-button{
+			position: relative;
+			bottom: 0;
+		}
 	}
+
 
 	/* Articles */
 	.node-type-article{
