--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-992.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-992.less
@@ -84,7 +84,7 @@
 		}	
 	}
 	.breadcrumb {
-	  padding: 5px 15px !important;
+	  padding: 10px !important;
 	}
 	#navbar > div > div:nth-child(1) > div > div > div.col-xs-12.col-sm-3.xs-menu{
 		padding-right: 10px;
