--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-min-1200.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-min-1200.less
@@ -1,5 +1,7 @@
+.isMobile{
+	float: right !important;
+}
 @media (min-width: 1200px) {
-
 	/*Slider Publications*/
 	body.page-tools-and-publications-publications{
 		.slider--video--section{
