--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -3399,6 +3399,21 @@ div.workbench-info-block{
 	}
 }
 
+.view-display-id-fop img, .view-display-id-een img, .view-display-id-block_1 img {
+    width: 110px;
+    height: 74px;
+}
+
+.view-display-id-block_1{
+	.pager{
+		img{
+			width: auto; 	
+			height: auto;
+		}
+	}
+		 
+}
+
 .page-campaign-partners-enterprise-europe-network{
 	.view-content{
 		display: flex;
