--- a/docroot/sites/all/themes/hwc_frontend/css/style.css
+++ b/docroot/sites/all/themes/hwc_frontend/css/style.css
@@ -7499,7 +7499,7 @@ header.navbar-default .navbar-collapse nav ul.menu li .dropdown-toggle:hover {
 }
 header.navbar-default .navbar-collapse nav ul.menu li .dropdown-menu {
   padding: 0;
-  min-width: 100%;
+  width: 100%;
   box-shadow: 0 0px 0px rgba(0, 0, 0, 0);
   border: none;
   background-color: #003399;
