--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-480.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-480.less
@@ -17,6 +17,19 @@
     	}
 	}
 
+	.container{
+		.menu-name-main-menu{
+			ul.menu{
+				&.nav{
+					.content-box-sub{
+						width: 100%;
+						margin: 0 0 0.7em;
+					}
+				}
+			}
+		}
+	}
+
 	.field.field-name-field-summary{
 		margin-left: 0;
 		margin-right: 0;
