--- a/docroot/sites/all/themes/hwc_frontend/less/header.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/header.less
@@ -330,8 +330,7 @@ header.navbar-default{
 					}
 					.dropdown-menu{
 						padding: 0;
-						min-width: 100%;
-						//min-width: 160px;
+						width: 100%;
 						box-shadow: 0 0px 0px rgba(0, 0, 0, 0);
 						border: none;
 						background-color: @menu-bg-color;
