--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -3626,19 +3626,32 @@ div.workbench-info-block{
 }
 
 .profile-2-cols-container-3{
+	.views-row{
+		padding: 1em 1em 1em 0em;
+		border-bottom: 1px solid #acc700;
+	}
+
+	.views-row.views-row-last{
+		border-bottom: 0;
+	}
+
 	.profile-col-left-3{
+		padding-top: 30px;
 		h2.pane-title{
-			background: url(../images/mpp-create-news.png) 50% 4% no-repeat;
-    		text-align: center;
-    		padding-top: 70px;
+			background: url(../images/mpp-create-news.png) 0% 4% no-repeat;
+    		text-align: left;
+   			padding-top: 15px;
+    		padding-left: 83px;
 		}
 	}
 	.profile-col-right-3{
-		padding-left: 75px;
+		padding-top: 30px;
+		padding-left: 3em;
 		h2.pane-title{
-			background: url(../images/mpp-create-event.png)  50% 4% no-repeat;
-			text-align: center;
-    		padding-top: 70px;
+			background: url(../images/mpp-create-event.png) 0% 0% no-repeat;
+    		text-align: left;
+    		padding-top: 15px;
+    		padding-left: 76px;
 		}
 
 		.views-field-field-start-date{
@@ -3665,11 +3678,6 @@ div.workbench-info-block{
 		.views-field-title-field{
 			clear: both;
 		}
-	}
-
-	.view-partner-content{
-		width: 50%;
-		margin: 0 auto;
 	}
 
 	.panels-flexible-region a{
