--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -134,6 +134,21 @@ body{
 			display: none;
 		}
 	}
+
+	.btn-default, .more-link, .btn-primary{
+		position: relative;
+	    color: #FFF;
+	    width: auto;
+	    background: #003399;
+	    border-radius: 5px;
+	    .glyphicon-log-in:before {
+			content: " ";
+			background: url(../images/header/login.png) no-repeat 0px center;
+			width: 17px;
+			height: 14px;
+			display: block;
+		}
+    }
 }
 
 #block-hwc-homepage-splash-title-banner-countdown{
