--- a/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
+++ b/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
@@ -135,6 +135,17 @@ body .btn-primary .glyphicon-log-in:before {
   height: 14px;
   display: block;
 }
+body .btn-default .glyphicon-upload:before,
+body .more-link .glyphicon-upload:before,
+body .btn-primary .glyphicon-upload:before {
+  content: none;
+}
+body .btn-default:hover,
+body .more-link:hover,
+body .btn-primary:hover {
+  background-color: #002266;
+  border-color: #001f5c;
+}
 #block-hwc-homepage-splash-title-banner-countdown {
   margin-top: 1em;
 }
@@ -6122,6 +6133,8 @@ body.front-page .main-container .newsletter-social-media #newsletter-subscriptio
   height: 32px;
   border-top-right-radius: 7px;
   border-bottom-right-radius: 7px;
+  border-top-left-radius: 0;
+  border-bottom-left-radius: 0;
 }
 body.front-page .main-container .newsletter-social-media #newsletter-subscription-frontpage-form-wrapper .form-submit:before {
   content: none;
