--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -148,6 +148,15 @@ body{
 			height: 14px;
 			display: block;
 		}
+
+		.glyphicon-upload:before{
+			content: none;
+		}
+
+		&:hover{
+			background-color: #002266;
+    		border-color: #001f5c;
+		}
     }
 }
 
@@ -7039,6 +7048,8 @@ body.front-page{
 					height: 32px;
 					border-top-right-radius: 7px;
 					border-bottom-right-radius: 7px;
+					border-top-left-radius: 0;
+					border-bottom-left-radius: 0;
 					&:before{
 						content: none;
 					}
