--- a/docroot/sites/all/themes/hwc_frontend/less/content.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/content.less
@@ -5645,6 +5645,10 @@ html:lang(hu) , html:lang(nl), html:lang(mt) {
 					padding-right: 35px;
 				}
 			}
+			#edit-search-api-views-fulltext{
+				width: 100% !important;
+				margin-top: 2px;
+			}
 			.views-submit-button{
 				position: absolute;
 				top: 0px;
@@ -5770,6 +5774,7 @@ html:lang(hu) , html:lang(nl), html:lang(mt) {
 							    font-weight: normal;
 							    font-style: normal;
 							    background: #003399;
+							    border-radius: 7px;
 							    &:hover{
 							    	background-color: #002266;
 							    	color: white;
